src/scss/layout/_grid.scss
/* ================================== */
/*         MAIN GRID SETTINGS         */
/* ================================== */

.wrapper {
    display: grid;
    grid-gap: 15px;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: [start header] 80px [content] auto [sidebar] auto [footer end];
    grid-template-areas:
            "header header header header"
            "content content content sidebar"
            "footer footer footer footer";
}

